Try this fix for background image http://stackoverflow.com/questions/18324063/rails-4-images-not-loading-on-heroku

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -70,7 +70,7 @@ body {
   font-family: "Circular", "Avenir Next", sans-serif;
   padding-top: 70px;
   padding-bottom: 70px;
-  background-image: url(notebook.png);
+  background-image: image-url("notebook.png");
   background-repeat: repeat;
 
   .container-background {
